--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ if (!gl) {
 
     <ul>
         <li>Please list your team members with NetID in this unordered list.</li>
-        <li>Josh Beinhacker (jpb345), Aishwarya Sing (as2539), Alex Schneider (as339)</li>
+        <li>Josh Beinhacker (jpb345), Aishwarya Singh (as2539), Alex Schneider (as339)</li>
     </ul>
 </div>
 
