--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
 <script src="data/population.js"></script>
 <script src="data/gdp_per_capita.js"></script>
 <script src="data/life_expectancy.js"></script>
+<script id="vertexShader" type="x-shader/x-vertex">
+attribute vec3 coordinates;
+
+void main(void) {
+ gl_Position = vec4(coordinates, 1.0);
+}
+</script>
+<script id="fragmentShader" type="x-shader/x-fragment">
+void main(void) {
+ gl_FragColor = vec4(0.0, 0.0, 0.0, 0.1);
+}
+</script>
 <script type="text/javascript">
 function populateControls() {
     var container = document.getElementById("country_list");
@@ -106,6 +118,10 @@ $("#webglCanvas").mousemove(function (event) {
     var out = getData(xc, yc);
     $("#cursor_gdp").html(out[0].toFixed(2));
     $("#cursor_life_expectancy").html(out[1].toFixed(2));
+});
+$("#webglCanvas").mouseleave(function (event) {
+    $("#cursor_gdp").html("");
+    $("#cursor_life_expectancy").html("");
 });
 populateControls();
     
@@ -194,8 +210,7 @@ if (!gl) {
         alert("Cannot get WebGL context!");
     }
 }
-   console.log(getScale(1000001.0, 101.0, 50000, 10, true, true));
-   vertices = getScale(1000001.0, 101.0, 50000, 10, true, true);
+   vertices = getScale(1000001.0, 101.0, 50000, 10, xIsLog, yIsLog);
           
          // Create an empty buffer object
          var vertex_buffer = gl.createBuffer();
@@ -208,11 +223,7 @@ if (!gl) {
          gl.bindBuffer(gl.ARRAY_BUFFER, null);
          /*=================== Shaders ====================*/
          // Vertex shader source code
-         var vertCode =
-            'attribute vec3 coordinates;' +
-            'void main(void) {' +
-               ' gl_Position = vec4(coordinates, 1.0);' +
-            '}';
+         var vertCode = $("#vertexShader").html();
          // Create a vertex shader object
          var vertShader = gl.createShader(gl.VERTEX_SHADER);
          // Attach vertex shader source code
@@ -220,10 +231,7 @@ if (!gl) {
          // Compile the vertex shader
          gl.compileShader(vertShader);
          // Fragment shader source code
-         var fragCode =
-            'void main(void) {' +
-               'gl_FragColor = vec4(0.0, 0.0, 0.0, 0.1);' +
-            '}';
+         var fragCode = $("#fragmentShader").html();
          // Create fragment shader object
          var fragShader = gl.createShader(gl.FRAGMENT_SHADER);
          // Attach fragment shader source code
@@ -267,7 +275,7 @@ if (!gl) {
 
     <ul>
         <li>Please list your team members with NetID in this unordered list.</li>
-        <li>Josh Beinhacker (jpb345), Aishwarya Sing (as2539), Alex Schneider (as339), Spencer Weiss (spw66)</li>
+        <li>Josh Beinhacker (jpb345), Aishwarya Sing (as2539), Alex Schneider (as339), Spencer Weiss (sbw66)</li>
     </ul>
 </div>
 
