--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ renderLoop();
 
     <ul>
         <li>Please list your team members with NetID in this unordered list.</li>
-        <li>Josh Beinhacker (jpb345), Aishwarya Sing (as2539), Alex Schneider (as339), Spencer Weiss (sbw66)</li>
+        <li>Josh Beinhacker (jpb345), Aishwarya Sing (as2539), Alex Schneider (aas339), Spencer Weiss (sbw66)</li>
     </ul>
 </div>
 
