--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ void main(void) {
 </script>
 <script type="text/javascript">
 var data = [];
+var selected = -1;
 function populateControls() {
     var container = document.getElementById("country_list");
     for (let i = 0; i < getCountryList().length; i++) {
@@ -139,15 +140,22 @@ $("#webglCanvas").mouseleave(function (event) {
     $("#cursor_life_expectancy").html("");
 });
 $("#webglCanvas").mousedown(function (event) {
+    var copy = data.slice();
     var clientRect = $("#webglCanvas")[0].getBoundingClientRect();
     var x = event.clientX - clientRect.left;
     var y = clientRect.height - (event.clientY - clientRect.top);
     // Convert to -1 to 1
     var xc = 2*x / clientRect.width - 1;
     var yc = 2*y / clientRect.height - 1;
-    var out = getData(xc, yc);
-    $("#cursor_gdp").html(out[0].toFixed(2));
-    $("#cursor_life_expectancy").html(out[1].toFixed(2));
+    // Find the center closest to this in the cloned data
+    var intersection = -1;
+    for (i in copy) {
+        var distance = Math.sqrt(Math.pow(xc-data[i].coord[0],2) + Math.pow(yc-data[i].coord[1],2));
+        if (distance < data[i].radius) {
+            intersection = i;
+        }
+    }
+    selected = intersection;
 });
 populateControls();
     
@@ -357,13 +365,13 @@ function renderLoop() {
     // Second object
     function drawCircle(centerx, centery, r, color) {
         var vertices = [];
-        for (var i = 0; i < 20; i++) {
+        for (var i = 0; i < 10; i++) {
             // This vertex, the next vertex, and the center each time
-            vertices.push(r*Math.cos(2*i*Math.PI/20) + centerx);
-            vertices.push(r*Math.sin(2*i*Math.PI/20) + centery);
+            vertices.push(r*Math.cos(2*i*Math.PI/10) + centerx);
+            vertices.push(r*Math.sin(2*i*Math.PI/10) + centery);
             vertices.push(-1);
-            vertices.push(r*Math.cos(2*(i+1)*Math.PI/20) + centerx);
-            vertices.push(r*Math.sin(2*(i+1)*Math.PI/20) + centery);
+            vertices.push(r*Math.cos(2*(i+1)*Math.PI/10) + centerx);
+            vertices.push(r*Math.sin(2*(i+1)*Math.PI/10) + centery);
             vertices.push(-1);
             vertices.push(centerx);
             vertices.push(centery);
@@ -381,7 +389,7 @@ function renderLoop() {
         gl.uniform3fv(gl.getUniformLocation(shaderProgram,"color"), color);
         gl.drawArrays(gl.TRIANGLES, 0, vertices.length/3);
     }
-    year = 0;
+    year = yearSlider.slider("value") - 1800;
     data = [];
     var maxPopulation = -1;
     for (i in getCountryList()) {
