--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@ for (i in getCountryList()) {
     if (getCountryList()[i].region == "Africa") {colors[getCountryList()[i].name] = yellow}
 }
     
+//returns points for a line_strip of all points for any country with index idx.
 function getTrend(idx){
     var out = [];
     var last = null;
