--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@ void main(void) {
 <script type="text/javascript">
 var data = [];
 var hovered = -1;
-var selected = -1;
 function populateControls() {
     var container = document.getElementById("country_list");
     for (let i = 0; i < getCountryList().length; i++) {
@@ -149,21 +148,17 @@ $("#webglCanvas").mousemove(function (event) {
     for (i in data) {
         var distance = Math.sqrt(Math.pow(xc-data[i].coord[0],2) + Math.pow(yc-data[i].coord[1],2));
         if (distance < data[i].radius) {
-            intersection = data[i].index;
+            intersection = i;
             break;
         }
     }
     hovered = intersection;
     if (hovered != -1) {
-        var name = getCountryList()[hovered].name;
-        var gdp = getGdpPerCapita()[name][year];
-        var life_expectancy = getLifeExpectancy()[name][year];
-        var population = getPopulation()[name][year];
-        $("#point_country").html(name);
-        $("#point_year").html(yearSlider.slider("value"));
-        $("#point_gdp").html(gdp);
-        $("#point_life_expectancy").html(life_expectancy);
-        $("#point_population").html(population);
+        $("#point_country").html(data[hovered].name);
+        $("#point_year").html(data[hovered].year);
+        $("#point_gdp").html(data[hovered].gdp);
+        $("#point_life_expectancy").html(data[hovered].life_expectancy);
+        $("#point_population").html(data[hovered].population);
     } else {
         $("#point_country").html("");
         $("#point_year").html("");
@@ -191,7 +186,9 @@ $("#webglCanvas").mousedown(function (event) {
             intersection = data[i].index;
         }
     }
-    selected = intersection;
+    if (intersection != -1) {
+        $("#country-" + intersection).attr('checked', true);
+    }
 });
 populateControls();
     
@@ -324,7 +321,7 @@ if (!gl) {
         alert("Cannot get WebGL context!");
     }
 }
-vertices = getScale(5000.0, 50.0, 5000, 10, xIsLog, yIsLog);
+vertices = getScale(5000.0, 90.0, 5000, 10, xIsLog, yIsLog);
 // Create an empty buffer object
 var vertex_buffer = gl.createBuffer();
 // Bind appropriate array buffer to it
@@ -499,34 +496,26 @@ function renderLoop() {
     var maxPopulation = -1;
     for (var p = min; p <= max; p++) {
         for (i in countries) {
-            var name = getCountryList()[i].name;
+            var name = countries[i].name;
             var gdp = getGdpPerCapita()[name][p];
             var life_expectancy = getLifeExpectancy()[name][p];
             var population = getPopulation()[name][p];
-            var selected = $("#country-" + i).prop('checked');
-            if (anyChecked && !selected) {
-                continue;
-            }
             if (!population || !life_expectancy || !name) {
                 continue;
             }
             maxPopulation = Math.max(maxPopulation, population);
-            data.push({coord: getCoord(gdp, life_expectancy), population: population, color: colors[name], radius: 0, index: i});
+            data.push({coord: getCoord(gdp, life_expectancy), population: population, color: colors[name], radius: 0, index: i, gdp: gdp, life_expectancy: life_expectancy, year: p + 1800, name: name});
         }
     }
-    var j = -1;
     for (var i = 0; i < data.length; i++) {
-        var biggest = 0.2;
+        var biggest = 0.05;
         data[i].radius = Math.pow(data[i].population,0.3)/Math.pow(maxPopulation,0.3)*biggest;
         drawCircle(data[i].coord[0], data[i].coord[1], data[i].radius, data[i].color);
-        if (data[i].index == hovered) {
-            j = i;
-        }
     }
-    if (j != -1) {
-        drawHighlight(data[j].coord[0], data[j].coord[1], data[j].radius + 0.01);
-        drawHighlight(data[j].coord[0], data[j].coord[1], data[j].radius + 0.02);
-        drawHighlight(data[j].coord[0], data[j].coord[1], data[j].radius + 0.03);
+    if (hovered != -1) {
+        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.01);
+        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.02);
+        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.03);
     }
     window.requestAnimationFrame(renderLoop);
 }
