--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ function getScale(rx, ry, incx, incy, logx, logy){
     //use getScale first
 function getCoord(nx, ny){
     var out = [];
-    out.push(2 * (xIsLog ? Math.log10(nx)/Math.log10(xmax) : nx/xmax) - 1.0);
+    out.push(2 * (xIsLog ? Math.log10(nx/100)/Math.log10(xmax/100) : nx/xmax) - 1.0);
     out.push(2 * (yIsLog ? Math.log10(ny)/Math.log10(ymax) : ny/ymax) - 1.0);
     out.push(0);
     return out;
@@ -278,9 +278,9 @@ function getCoord(nx, ny){
 // Gets data based on coordinates in range [-1,-1]x[1,1]
 function getData(coordx, coordy){
     var out = [];
-    var nx = ((coordx + 1.0) / 2.0)*(xIsLog ? Math.log10(xmax) : xmax);
+    var nx = ((coordx + 1.0) / 2.0)*(xIsLog ? Math.log10(xmax/100) : xmax);
     var ny = ((coordy + 1.0) / 2.0)*(yIsLog ? Math.log10(ymax) : ymax);
-    nx = xIsLog ? Math.pow(10,nx) : nx;
+    nx = xIsLog ? Math.pow(10,nx)*100 : nx;
     ny = yIsLog ? Math.pow(10,ny) : ny;
     out.push(nx);
     out.push(ny);
@@ -346,7 +346,7 @@ if (!gl) {
         alert("Cannot get WebGL context!");
     }
 }
-vertices = getScale(5000.0, 90.0, 5000, 10, xIsLog, yIsLog);
+vertices = getScale(150000.0, 90.0, 1000, 10, true, false);
 // Create an empty buffer object
 var vertex_buffer = gl.createBuffer();
 // Bind appropriate array buffer to it
