--- a/index.html
+++ b/index.html
@@ -456,14 +456,6 @@ function renderLoop() {
             vertices.push(centery);
             vertices.push(-0.1);
         }
-        if(singleCountry){
-            var index = getSelectedCountries()[0];
-            var trendcoords = getTrend(index);
-            var trendbuff = gl.createBuffer();
-            gl.bindBuffer(gl.ARRAY_BUFFER, trendbuff);
-            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(trendcoords), gl.STATIC_DRAW);
-            gl.drawArrays(gl.LINE_STRIP, 0, trendcoords.length/3);
-        }
         
         var buff2 = gl.createBuffer();
         gl.bindBuffer(gl.ARRAY_BUFFER, buff2);
@@ -536,7 +528,7 @@ function renderLoop() {
             data.push({coord: getCoord(gdp, life_expectancy), population: population, color: colors[name], radius: 0, index: i, gdp: gdp, life_expectancy: life_expectancy, year: p + 1800, name: name});
         }
     }
-    for (var i = 0; i < data.length; i++) {
+    for (var i = data.length - 1; i >= 0; i--) {
         var biggest = 0.05;
         data[i].radius = Math.pow(data[i].population,0.3)/Math.pow(maxPopulation,0.3)*biggest;
         if (hovered == i) {
