--- a/index.html
+++ b/index.html
@@ -466,20 +466,20 @@ function renderLoop() {
     // TRIANGLE_STRIP,TRIANGLE_FAN, TRIANGLES
     gl.bindBuffer(gl.ARRAY_BUFFER, null);
     // Second object
-    function drawCircle(centerx, centery, r, color) {
+    function drawCircle(centerx, centery, r, color, zindex) {
         var vertices = [];
         var numVertices = 10;
         for (var i = 0; i < numVertices; i++) {
             // This vertex, the next vertex, and the center each time
             vertices.push(r*Math.cos(2*i*Math.PI/numVertices) + centerx);
             vertices.push(r*Math.sin(2*i*Math.PI/numVertices) + centery);
-            vertices.push(-0.1);
+            vertices.push(zindex);
             vertices.push(r*Math.cos(2*(i+1)*Math.PI/numVertices) + centerx);
             vertices.push(r*Math.sin(2*(i+1)*Math.PI/numVertices) + centery);
-            vertices.push(-0.1);
+            vertices.push(zindex);
             vertices.push(centerx);
             vertices.push(centery);
-            vertices.push(-0.1);
+            vertices.push(zindex);
         }
         
         var buff2 = gl.createBuffer();
@@ -556,10 +556,14 @@ function renderLoop() {
     for (var i = data.length - 1; i >= 0; i--) {
         var biggest = $("#circleSlider").slider("value");
         data[i].radius = Math.pow(data[i].population,0.3)/Math.pow(maxPopulation,0.3)*biggest;
+
+        var zindex = -0.1;
         if (hovered == i) {
             data[i].color = [data[i].color[0],data[i].color[1],data[i].color[2],1];
+            zindex = -1;
         }
-        drawCircle(data[i].coord[0], data[i].coord[1], data[i].radius, data[i].color);
+
+        drawCircle(data[i].coord[0], data[i].coord[1], data[i].radius, data[i].color, zindex);
         drawHighlight(data[i].coord[0], data[i].coord[1], data[i].radius + 0.001, [0, 0, 0, 1], -0.1);
     }
     if (hovered != -1) {
