--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ function renderLoop() {
 
         var zindex = -0.1;
         if (hovered == i) {
-            data[i].color = [data[i].color[0],data[i].color[1],data[i].color[2],1];
+            data[i].color = [1,0,1,1];
             zindex = -1;
         }
 
